<resources>
    <string name="app_name">Psicologia</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lb_nombre">Nombres: </string>
    <string name="lb_apellidos">Apellidos: </string>
    <string name="lb_fechanacimiento">Fecha de Nacimiento: </string>
    <string name="lb_edad">Edad: </string>
    <string name="lb_aditamientosterapeuticos">Aditamientos Terapeuticos: </string>
    <string name="lb_numidentificacion">N° Identificacion: </string>
    <string name="lb_estrato">Estrato: </string>
    <string name="lb_curso">Curso: </string>
    <string name="lb_lateralidad">Lateralidad: </string>
    <string name="lb_tipoaplicacion">Tipo de Aplicacion: </string>
    <string name="lb_Genero">Genero: </string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="completa">Completa</string>
    <string name="memoria">Memoria</string>
    <string name="atencion">Atencion</string>
    <string name="funcionesejecutivas">Funciones Ejecutivas</string>
    <string name="lenguaje">Lenguaje</string>


    <string name="lb_elefante">Elefante</string>
    <string name="lb_conejo">Conejo</string>
    <string name="lb_mariposa">Mariposa</string>
    <string name="lb_pato">Pato</string>

    <string name="lb_sarten">Sarten</string>
    <string name="lb_tenedor">Tenedor</string>
    <string name="lb_jarra">Jarra</string>
    <string name="lb_estufa">Estufa</string>

    <string name="lb_guante">Guante</string>
    <string name="lb_zapato">Zapato</string>
    <string name="lb_sombrero">Sombrero</string>
    <string name="lb_pañuelo">Pañuelo</string>

    <string name="lb_fresa">Fresa</string>
    <string name="lb_piña">Piña</string>
    <string name="lb_uvas">Uvas</string>
    <string name="lb_banano">Banano</string>

    <string name="lb_intrucion">Intrucion</string>
    <string name="lb_persevacion">Perseveracion</string>

    <string name="lb_explicacion">Tache todas las "A" que encuentre en las siguientes letras</string>
    <string name="lb_ensayo">Ensayo: </string>

    <string name="lb_auditiva">Escuche atentamente y presione</string>
    <string name="lb_auditiva3">el botón en el momento</string>
    <string name="lb_auditiva2">que se mencione la letra A </string>

    <string name="lb_aciertos">Aciertos: </string>
    <string name="lb_errores">Errores: </string>

    <string name="lb_siguiente">Siguiente</string>
    <string name="lb_buscar">Buscar</string>
    <string name="lb_memoria">Memoria semántica</string>
    <string name="lb_auditivaa">Auditiva</string>
    <string name="lb_visual">Visual</string>
    <string name="lb_Token">TokenTest</string>

    <string name="lb_datostoken">Ingrese los datos del TokenTest</string>
    <string name="lb_nivel">Nivel de alcance</string>
    <string name="lb_frases">Numero de frases acertadas</string>
    <string name="lb_puntaje">Puntaje total</string>
    <string name="lb_ingreseid">Ingrese la identificacion a buscar: </string>



    <string name="lb_presentacion_memoria">Prueba de memoria semántica con incremento asociativo</string>
    <string name="lb_presentacion_atencion">Prueba de atencion auditiva y visual</string>





</resources>
