<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="#ffffffff" />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:id="@+id/img_conejo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/Uvas"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="700dp" />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:id="@+id/img_mariposa"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/PinŽa"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="730dp" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/img_pato"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/Fresa"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="200dp" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/img_elefante"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/Banano"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lb_banano"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="340dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lb_fresa"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="630dp"
        android:layout_marginLeft="340dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lb_uvas"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="840dp"
        android:layout_marginTop="320dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lb_piña"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="630dp"
        android:layout_marginLeft="860dp" />

</RelativeLayout>